[gd_scene load_steps=4 format=3 uid="uid://2kcan7qt3yhw"]

[ext_resource type="Script" uid="uid://5lrb8liv75wp" path="res://scenes/Ennemies/bannana.gd" id="1_07piw"]
[ext_resource type="Texture2D" uid="uid://dx3wiow8lt2hj" path="res://Sprites/GBbanana.png" id="1_pau31"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_07piw"]
size = Vector2(9, 4)

[node name="Bannana" type="Area2D"]
scale = Vector2(0.7, 0.7)
collision_layer = 16
collision_mask = 3
script = ExtResource("1_07piw")

[node name="GBbanana" type="Sprite2D" parent="."]
texture = ExtResource("1_pau31")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_07piw")
debug_color = Color(0.948137, 1.05888e-06, 0.579759, 0.42)

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
